// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account: index mapStateToProps with values 1`] = `
Object {
  "account": Object {
    "error": null,
  },
}
`;

exports[`Account: index mapStateToProps without values 1`] = `
Object {
  "account": Object {},
}
`;

exports[`Account: index renders correctly with empty values 1`] = `
"<div className=\\"pt-card address-margin-bottom\\">
  <div className=\\"row smd-pad-2 smd-margin-4 smd-vertical-center\\">
    <div className=\\"col-sm-10\\">
      <h4>
        Address:    
        <HexText value=\\"\\" classes=\\"smd-pad-2\\" />
      </h4>
    </div>
  </div>
  <table className=\\"pt-table pt-str\\">
    <thead>
      <tr>
        <th>
          Field
        </th>
        <th>
          Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <strong>
            Contract Root
          </strong>
        </td>
        <td>
          <HexText value={[undefined]} classes=\\"smd-pad-2\\" />
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Kind
          </strong>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          <strong>
            Balance
          </strong>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          <strong>
            Latest Block Number
          </strong>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          <strong>
            Code Hash
          </strong>
        </td>
        <td>
          <HexText value={[undefined]} classes=\\"smd-pad-2\\" />
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Nonce
          </strong>
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Account: index renders correctly with values 1`] = `
"<div className=\\"pt-card address-margin-bottom\\">
  <div className=\\"row smd-pad-2 smd-margin-4 smd-vertical-center\\">
    <div className=\\"col-sm-10\\">
      <h4>
        Address:    
        <HexText value=\\"0004537908d44f458acb24b0f2c863ccd2bd3a13\\" classes=\\"smd-pad-2\\" />
      </h4>
    </div>
  </div>
  <table className=\\"pt-table pt-str\\">
    <thead>
      <tr>
        <th>
          Field
        </th>
        <th>
          Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <strong>
            Contract Root
          </strong>
        </td>
        <td>
          <HexText value={[undefined]} classes=\\"smd-pad-2\\" />
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Kind
          </strong>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          <strong>
            Balance
          </strong>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          <strong>
            Latest Block Number
          </strong>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          <strong>
            Code Hash
          </strong>
        </td>
        <td>
          <HexText value={[undefined]} classes=\\"smd-pad-2\\" />
        </td>
      </tr>
      <tr>
        <td>
          <strong>
            Nonce
          </strong>
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>"
`;
